gcc/testsuite/algol68/compile/error-stropping-5.a68
begin int j;
      j := "joo" { dg-error "char.*int" }
end
